added cqrs added game_summary table refactoring
